--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@ html {
     overflow-x: hidden;
 }
 h1 {
-    font-size: 8vw;
+    font-size: 8vh;
     text-align: center;
     background: -webkit-linear-gradient(#7966FF, #00CCCC);
     -webkit-background-clip: text;
