--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,8 +39,8 @@ p {
 .row img {
     width: 100%;
     height: auto;
-    border-radius: 10px;
-    box-shadow: 0 8px 6px -6px black;
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px 5px #ddd;
 }
 footer {
     font-family: 'Roboto', sans-serif;
