--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,8 @@
 
 html {
     background-color: #fff;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 p {
     font-family: 'Shadows Into Light', cursive;
